Adding GWT based test cases.